# Qt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.80e5609  README.md  main.cpp  resources.qrc
Qt_Cluster/: .resources.qrc.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.80e5609  busreader.cpp  busreader.h  client.cpp  client.hpp  client.json  main.cpp  resources.qrc  serialmanager.cpp  serialmanager.h  systemmanager.cpp  systemmanager.h
Qt_Cluster/qml/: CarView.qml  Cluster.qml  ErrorDialog.qml  Fingerprint.qml  GearIndicator.qml  Main.qml  MediaWidget.qml  NavigationWidget.qml  PasswordDialog.qml  SpeedWidget.qml  TopBar.qml
Test_Qt/: CMakeLists.txt  Main.qml  main.cpp  serialreader.cpp  serialreader.h
Test_Qt_CAN/: CMakeLists.txt  Main.qml  busreader.cpp  busreader.h  main.cpp
qml/: Main.qml  NavigationWidget.qml  RpmWidget.qml  SpeedWidget.qml
